--- a/Statistical_Model.qmd
+++ b/Statistical_Model.qmd
@@ -8,13 +8,31 @@ execute:
 
 format:
   html:
-    code-fold: true
     code-line-numbers: true
+    self-contained: true
+    page-layout: full
+    title-block-banner: true
+    toc: true
+    toc-depth: 3
+    toc-location: body
+    number-sections: false
+    html-math-method: katex
+    code-fold: true
+    code-summary: "Show the code"
+    code-overflow: wrap
+    code-copy: hover
+    code-tools:
+        source: false
+        toggle: true
+        caption: See code
 ---
 
 ### Data & Libraries
 
 ```{r, message=FALSE, warning=FALSE}
+#| label: libraries
+#| include: false
+
 library(dplyr)
 library(ggplot2)
 library(readr)
@@ -65,6 +83,7 @@ ggplot(data2, aes(x = key, y = value, fill = value)) +
   labs(title = "Victim Age Distribution", x = "Victim Age", y = "Count") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
+
 The offender age distribution highlights that the most common age bracket for offenders is 20–29, closely followed by the 30–39 age group. This suggests that individuals aged 20–39 are most frequently involved in offenses. Such findings could reflect societal, economic, or psychological factors influencing this demographic's behavior.
 
 Similarly, the victim age distribution mirrors this trend, with the 20–29 age bracket being the most commonly affected group. This overlap may indicate that offenders and victims often belong to similar age groups, which could be linked to social environments or interpersonal relationships prevalent within these age ranges.
@@ -88,6 +107,7 @@ ggplot(data4, aes(x = key, y = value, fill = value)) +
   labs(title = "Victim Ethnicity Distribution", x = "Ethnicity", y = "Count") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
+
 From these distributions, we can infer important insights regarding ethnicity. Although the charts do not provide a detailed breakdown of specific ethnic groups, they reveal that the majority of both offenders and victims are identified as neither Hispanic nor Latino. This suggests that other ethnic groups may be more frequently involved as either offenders or victims.
 
 This observation underscores the need for further analysis to understand the sociocultural and systemic factors contributing to these patterns. By identifying the specific ethnic groups represented and examining the contextual factors, policymakers and community leaders can design more effective interventions to address the root causes and disparities associated with crime and victimization.
@@ -109,6 +129,10 @@ ggplot(data6, aes(x = key, y = value, fill = value)) +
   labs(title = "Victim Race Distribution", x = "Race", y = "Count") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
+
+Among offenders, White individuals and African Americans are represented in the highest proportions, suggesting that these groups are more frequently involved in criminal incidents. This observation may reflect broader societal, economic, or structural factors that influence crime rates and should be further examined to identify underlying causes.
+
+When examining victims, it appears that White individuals are more likely to be affected. This pattern underscores the need to explore potential connections between offender demographics and victimization trends, considering factors such as geographic location, socio-economic context, and interpersonal dynamics.
 
 # Visualizations of Sex
 
